Document and enable OpenTelemetry instrumentation

--- a/docs/guide/integrations.asciidoc
+++ b/docs/guide/integrations.asciidoc
@@ -5,6 +5,13 @@ You can find integration options and information on this page.
 
 
 [discrete]
+[[opentelemetry-intro]]
+=== OpenTelemetry instrumentation
+
+The Python Elasticsearch client supports native OpenTelemetry instrumentation following the https://opentelemetry.io/docs/specs/semconv/database/elasticsearch/[OpenTelemetry Semantic Conventions for Elasticsearch].
+Refer to the <<opentelemetry>> page for details.
+
+[discrete]
 [[transport]]
 === Transport
 
@@ -53,3 +60,6 @@ es.options(
 ------------------------------------
 
 Type hints also allow tools like your IDE to check types and provide better auto-complete functionality.
+
+
+include::open-telemetry.asciidoc[]
