--- a/docs/examples/c0f4cbcb104747f38acdbc9a30bd13bf.asciidoc
+++ b/docs/examples/c0f4cbcb104747f38acdbc9a30bd13bf.asciidoc
@@ -4,10 +4,10 @@
 ----
 resp = client.inference.put_model(
     task_type="text_embedding",
-    inference_id="my_openai_embedding_model",
+    inference_id="openai_embeddings",
     body={
         "service": "openai",
-        "service_settings": {"api_key": "api_key"},
+        "service_settings": {"api_key": "<api_key>"},
         "task_settings": {"model": "text-embedding-ada-002"},
     },
 )
