--- a/docs/guide/release-notes.asciidoc
+++ b/docs/guide/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-13-0>>
 * <<rn-8-12-1>>
 * <<rn-8-12-0>>
 * <<rn-8-11-1>>
@@ -34,6 +35,14 @@
 * <<rn-8-1-1>>
 * <<rn-8-1-0>>
 * <<rn-8-0-0>>
+
+[discrete]
+[[rn-8-13-0]]
+=== 8.13.0 (2024-03-22)
+
+- Added native OpenTelemetry support
+- Added optional ``orjson`` (a fast, correct JSON library) serialization support
+- Fixed API key documentation
 
 [discrete]
 [[rn-8-12-1]]
